# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

filegroup(
    name = "resource",
    srcs = [
        "cert.pem",
        "key.pem",
    ],
    visibility = ["//visibility:private"],
)

java_binary(
    name = "module",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    data = [":resource"],
    main_class = "io.harness.ngmigration.NGMigrationApplication",
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//120-ng-manager:module",
        "//122-ng-authentication-settings:module",
        "//123-ng-core-user:module",
        "//136-git-sync-manager:module",
        "//375-ce-graphql:module",
        "//380-cg-graphql:module",
        "//390-db-migration:module",
        "//400-rest:module",
        "//420-delegate-service:module",
        "//840-template-service/contracts:module",
        "//870-cg-orchestration:module",
        "//874-orchestration-delay:module",
        "//890-sm-core:module",
        "//910-delegate-service-driver:module",
        "//920-delegate-service-beans:module",
        "//937-persistence-tracer:module",
        "//940-feature-flag:module",
        "//950-events-framework:module",
        "//950-telemetry:module",
        "//950-wait-engine:module",
        "//953-events-api:module",
        "//955-outbox-sdk:module",
        "//956-feature-flag-beans:module",
        "//959-timeout-engine:module",
        "//960-continuous-features:module",
        "//960-persistence:module",
        "//965-api-key-filter:module",
        "//970-api-services-beans:module",
        "//970-grpc:module",
        "//970-ng-commons:module",
        "//970-rbac-core:module",
        "//980-commons:module",
        "//999-annotations:module",
        "//pipeline-service/contracts:module",
        "//pipeline-service/modules/ng-triggers/contracts:module",
        "//pipeline-service/modules/orchestration-beans:module",
        "//pipeline-service/modules/orchestration-steps:module",
        "//pipeline-service/modules/orchestration-steps/contracts:module",
        "//srm-service/modules/cv-nextgen-service/contracts/commons:module",
        "//srm-service/modules/cv-nextgen-service/service:module",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_dirkraft_dropwizard_file_assets_dropwizard_file_assets",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_palominolabs_metrics_metrics_guice",
        "@maven//:com_smoketurner_dropwizard_swagger",
        "@maven//:com_squareup_okhttp3_logging_interceptor",
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:com_squareup_okhttp3_okhttp_urlconnection",
        "@maven//:com_squareup_okio_okio",
        "@maven//:com_squareup_retrofit2_converter_jackson",
        "@maven//:com_squareup_retrofit2_retrofit",
        "@maven//:commons_io_commons_io",
        "@maven//:dev_morphia_morphia_core",
        "@maven//:guru_nidi_com_kitfox_svgSalamander",
        "@maven//:guru_nidi_graphviz_java",
        "@maven//:guru_nidi_graphviz_rough",
        "@maven//:io_dropwizard_bundles_dropwizard_configurable_assets_bundle",
        "@maven//:io_dropwizard_dropwizard_auth",
        "@maven//:io_dropwizard_dropwizard_configuration",
        "@maven//:io_dropwizard_dropwizard_core",
        "@maven//:io_dropwizard_dropwizard_jersey",
        "@maven//:io_dropwizard_dropwizard_lifecycle",
        "@maven//:io_dropwizard_metrics_metrics_annotation",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_cache_cache_api",
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:javax_validation_validation_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_atmosphere_atmosphere_runtime",
        "@maven//:org_coursera_metrics_datadog",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_eclipse_jetty_jetty_servlets",
        "@maven//:org_glassfish_jersey_core_jersey_server",
        "@maven//:org_glassfish_jersey_media_jersey_media_multipart",
        "@maven//:org_hibernate_validator_hibernate_validator",
        "@maven//:org_reflections_reflections",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_core",
        "@maven//:ru_vyarus_guice_validator",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//100-migrator/src/test/resources:resource",
    ],
    resources = [
        "//100-migrator/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "module",
        "//960-persistence:supporter-test",
        "//980-commons:tests",
        "//990-commons-test:module",
        "@maven//:io_dropwizard_dropwizard_testing",
        "@maven//:io_github_benas_random_beans",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_api_mockito2",
        "@maven//:org_powermock_powermock_core",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

run_tests()

run_analysis()

exports_files([
    "keystore.jks",
    "newrelic.yml",
    "config.yml",
])
