load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//tools/bazel/pmd:defs.bzl", "pmd")

shared_dependencies = [
    "//400-rest:module",
    "//430-cv-nextgen-commons:module",
    "//490-ce-commons:module",
    "//860-orchestration-steps:module",
    "//860-orchestration-visualization:module",
    "//920-delegate-agent-beans:module",
    "//920-delegate-service-beans:module",
    "//930-delegate-tasks:module",
    "//950-events-framework:module",
    "//960-persistence:module",
    "//970-grpc:module",
    "//980-commons:module",
    "@maven//:com_google_inject_guice",
    "@maven//:io_swagger_swagger_annotations",
    "@maven//:javax_ws_rs_javax_ws_rs_api",
    "//:lombok",
]

java_binary(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    data = ["//:resource"],
    main_class = "io.harness.ChangeDataCaptureApplication",
    resources = [
        "//110-change-data-capture/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

checkstyle()

pmd()
