load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "//127-cd-nextgen-entities:module",
    "//400-rest:module",
    "//430-cv-nextgen-commons:module",
    "//490-ce-commons:module",
    "//800-pipeline-service:module",
    "//860-orchestration-steps:module",
    "//860-orchestration-visualization:module",
    "//920-delegate-agent-beans:module",
    "//920-delegate-service-beans:module",
    "//930-delegate-tasks:module",
    "//950-events-framework:module",
    "//960-persistence:module",
    "//970-grpc:module",
    "//980-commons:module",
    "@maven//:io_dropwizard_dropwizard_configuration",
    "@maven//:com_google_inject_guice",
    "@maven//:com_google_apis_google_api_services_bigquery",
    "@maven//:com_google_auth_google_auth_library_oauth2_http",
    "@maven//:com_google_cloud_google_cloud_bigquery",
    "@maven//:io_swagger_swagger_annotations",
    "@maven//:javax_ws_rs_javax_ws_rs_api",
    "//:lombok",
]

java_binary(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    data = ["//:resource"],
    main_class = "io.harness.ChangeDataCaptureApplication",
    resources = [
        "//110-change-data-capture/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

run_analysis()

exports_files([
    "config.yml",
])
