# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "//123-ng-core-user:module",
    "//125-cd-nextgen:module",
    "//127-cd-nextgen-entities:module",
    "//400-rest:module",
    "//490-ce-commons:module",
    "//pipeline-service/service:module",
    "//pipeline-service/modules/orchestration-visualization/contracts:module",
    "//920-delegate-agent-beans:module",
    "//920-delegate-service-beans:module",
    "//930-delegate-tasks:module",
    "//950-events-framework:module",
    "//960-continuous-features:module",
    "//960-persistence:module",
    "//970-grpc:module",
    "//980-commons:module",
    "//srm-service/modules/cv-nextgen-service/contracts/commons:module",
    "@maven//:io_dropwizard_dropwizard_configuration",
    "@maven//:io_harness_ff_java_server_sdk",
    "@maven//:com_google_inject_guice",
    "@maven//:com_google_apis_google_api_services_bigquery",
    "@maven//:com_google_auth_google_auth_library_oauth2_http",
    "@maven//:com_google_cloud_google_cloud_bigquery",
    "@maven//:io_swagger_swagger_annotations",
    "@maven//:javax_ws_rs_javax_ws_rs_api",
    "//:lombok",
]

java_binary(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    data = ["//:resource"],
    main_class = "io.harness.ChangeDataCaptureApplication",
    resources = [
        "//110-change-data-capture/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//110-change-data-capture/src/test/resources:resource",
    ],
    resources = [
        "//110-change-data-capture/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies + [
        "module",
        "//960-persistence:supporter-test",
        "//980-commons:tests",
        "//990-commons-test:module",
        "@maven//:io_dropwizard_dropwizard_testing",
        "@maven//:io_github_benas_random_beans",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@maven//:org_powermock_powermock_module_junit4",
        "@maven//:org_powermock_powermock_core",
        "@maven//:org_powermock_powermock_api_mockito2",
        "@maven//:pl_pragmatists_JUnitParams",
    ],
)

run_tests()

run_analysis()

exports_files([
    "config.yml",
])
