load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "sources")
load("//:macros.bzl", "sonarqube_test")
load("//:macros.bzl", "test_targets_list")
load("//tools/bazel/pmd:defs.bzl", "pmd")

sources()

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
        "//120-ng-manager/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-cd-nextgen:module",
        "//136-git-sync-manager:module",
        "//400-rest:module",
        "//440-connector-nextgen:module",
        "//920-delegate-service-beans:module",
        "//940-secret-manager-client:module",
        "//950-events-api:module",
        "//955-filters-sdk:module",
        "//960-notification-beans:module",
        "//960-yaml-sdk:module",
    ],
)

java_library(
    name = "tests",
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//120-ng-manager/src/test/resources:resource",
    ],
    resources = [
        "//120-ng-manager/src/test/resources:resource",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "module",
        "//:lombok",
        "//990-commons-test:module",
        "@maven//:io_dropwizard_dropwizard_testing",
        "@maven//:io_github_benas_random_beans",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

run_tests()

checkstyle()

sonarqube_test(
    name = "sq_mycomponent",
    srcs = ["sources"],
    targets = [
        ":module",
    ],
)

pmd()
